fix: clean up redundant variables and IDE warnings